gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test22048.d
version https://git-lfs.github.com/spec/v1
oid sha256:9513ea056bef6357cdbd76bacae06b6cbca7c1a798c8221e80816b0b28809552
size 175
